--- a/Task-4_Personal_portfolio_website/css/responsive.css
+++ b/Task-4_Personal_portfolio_website/css/responsive.css
@@ -7,7 +7,7 @@
 }
 @media only screen and (max-width: 600px) {
   #header {
-    background-image: url("/css/images/phone-background.png");
+    background-image: url("./images/responsive_bg.jpg");
   }
   .header-text {
     margin-top: 100%;
