--- a/PRODIGY_WD_02/stopwatch.css
+++ b/PRODIGY_WD_02/stopwatch.css
@@ -18,7 +18,7 @@ body {
   background-color: #27373b52;
   backdrop-filter: blur(30px);
   padding-top: 0;
-  padding-bottom: 60px;
+  padding-bottom: 30px;
   border: 2px solid rgba(255, 255, 255, 0.2);
   border-radius: 16px;
 }
@@ -44,10 +44,16 @@ body {
 }
 .action {
   width: 85%;
-  margin: 60px auto 0 auto;
+  margin: 20px auto 0 auto;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 30px;
+}
+.containeer ul {
+  height: 100px;
+  font-size: 20px;
+  overflow-y: auto;
+  scroll-behavior: smooth;
 }
 .action button {
   padding: 10px 20px;
@@ -61,14 +67,11 @@ body {
   cursor: pointer;
 }
 button:hover {
-  background-color: #141313;
-  color: #fff;
+  background-color: #dfd3d3;
+  color: #000000;
   border: 3px solid #b6b6b6;
-  /* border-top-color: red;
-  border-left-color: rgb(4, 0, 255);
-  border-bottom-color: rgb(0, 255, 21);
-  border-right-color: rgb(4, 0, 255); */
   padding: 7px 17px;
 }
-/* --------------------------------------btn------------------------------------- */
-
+button:active {
+  transform: scale(0.9);
+}
