--- a/PRODIGY_WD_04/css/1_Home.css
+++ b/PRODIGY_WD_04/css/1_Home.css
@@ -7,14 +7,19 @@
 html {
   scroll-behavior: smooth;
 }
+:root {
+  --wColor: #f9f1f1;
+  --bColor: #000000;
+  --gColor: #998f8f;
+}
 body {
-  background: #080808;
-  color: #fff;
+  background: var(--bColor);
+  color: var(--wColor);
 }
 #header {
   width: 100%;
   height: 100vh;
-  background-image: url("./images/bg.jpg");
+  background-image: url("./images/bg_black.png");
   background-size: cover;
   background-position: center;
 }
@@ -36,7 +41,7 @@ nav ul li {
   margin: 10px 20px;
 }
 nav ul li a {
-  color: #fff;
+  color: var(--wColor);
   text-decoration: none;
   font-size: 18px;
   position: relative;
@@ -68,7 +73,7 @@ nav ul li a:hover::after {
 /* =========>>About Page<<============ */
 #about {
   padding: 80px 0;
-  color: #ababab;
+  color: var(--gColor);
 }
 .row {
   display: flex;
@@ -87,32 +92,28 @@ nav ul li a:hover::after {
 }
 .sub-title {
   font-size: 60px;
-  color: #fff;
+  /* color: var(--wColor); */
   font-weight: 600;
 }
 .tab-titles {
   display: flex;
   margin: 20px 0 40px;
 }
+.tab-titles p:hover {
+  color: #ff004f;
+  transition: 0.8s;
+  text-decoration: underline;
+}
+.tab-titles p:active {
+  transform: scale(0.8);
+}
+
 .tab-links {
   margin-right: 50px;
   font-size: 18px;
   font-weight: 500;
   cursor: pointer;
   position: relative;
-}
-.tab-links::after {
-  content: "";
-  width: 0;
-  height: 3px;
-  background: #ff004f;
-  position: absolute;
-  left: 0;
-  bottom: -8px;
-  transition: 0.5s;
-}
-.tab-links.active-link::after {
-  width: 50%;
 }
 .tab-contents ul li {
   list-style: none;
