--- a/PRODIGY_WD_04/css/responsive.css
+++ b/PRODIGY_WD_04/css/responsive.css
@@ -7,7 +7,10 @@
 }
 @media only screen and (max-width: 600px) {
   #header {
-    background-image: url("./images/responsive_bg.jpg");
+    background-image: url("./images/phone_bg.png");
+  }
+  .mode {
+    display: none;
   }
   .header-text {
     margin-top: 100%;
